--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         header
@@ -16,19 +18,19 @@
         nav
     </nav>
 
-    <section id="section">
+    <section id="derecho">
         section
         <div id="article">article
-        <div id="h1">h1, h2, h3</div>
-        <div id="p">p</div>
-    </div>
+            <div id="h1">h1, h2, h3</div>
+            <div id="p">p</div>
+        </div>
     </section>
 
     <section id="aside">
-            aside
-        </section>
+        aside
+    </section>
 
-      
+
 
     <footer>
         footer
@@ -36,6 +38,7 @@
 
 
 
-    
+
 </body>
+
 </html>
